force-app/main/default/objects/Messaging_Snapshot_Child__c/Messaging_Snapshot_Child__c.object-meta.xml
<CustomObject>
    <label>Messaging Snapshot Child</label>
    <nameField>
        <displayFormat>MSC-{000000}</displayFormat>
        <label>Messaging Snapshot Child Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messaging Snapshot Children</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>