force-app/main/default/objects/Messaging_Snapshot_Child__c/fields/Average_Response_Time_By_DP__c.field-meta.xml
<CustomField>
    <fullName>Average_Response_Time_By_DP__c</fullName>
    <inlineHelpText>in seconds</inlineHelpText>
    <label>Average Response Time By DP</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>