force-app/main/default/objects/Messaging_Snapshot_Child__c/fields/Context_Child__c.field-meta.xml
<CustomField>
    <fullName>Context_Child__c</fullName>
    <inlineHelpText>We also create one of these records for the Context parent for message records which have no Context child</inlineHelpText>
    <label>Context Child</label>
    <length>18</length>
    <type>Text</type>
</CustomField>