force-app/main/default/objects/Messaging_Snapshot_Child__c/fields/Context_Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Context_Child_Object__c</fullName>
    <label>Context Child Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>