force-app/main/default/objects/Messaging_Snapshot_Child__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipName>Messaging_Shapshot_Children</relationshipName>
    <type>Lookup</type>
</CustomField>