force-app/main/default/objects/Messaging_Snapshot_Child__c/fields/Messaging_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Messaging Snapshot</label>
    <referenceTo>Messaging_Snapshot__c</referenceTo>
    <relationshipLabel>Messaging Snapshot Children</relationshipLabel>
    <relationshipName>Messaging_Snapshot_Children</relationshipName>
    <type>Lookup</type>
</CustomField>