force-app/main/default/objects/Messaging_Snapshot_Child__c/fields/Number_Of_Messages__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Messages__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Messages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>