force-app/main/default/objects/Messaging_Snapshot_Child__c/fields/Number_Of_Messages_Responded_To_By_DP__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Messages_Responded_To_By_DP__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Messages Responded To By DP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>