force-app/main/default/objects/Messaging_Snapshot_Child__c/fields/Number_Of_Unresponded_Messages_By_DP__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Unresponded_Messages_By_DP__c</fullName>
    <label>Number Of Unresponded Messages By DP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>