force-app/main/default/objects/Messaging_Snapshot_Child__c/fields/Total_Read_Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Read_Wait_Time__c</fullName>
    <formula>Average_Read_Time_By_DP__c *  Number_Of_Messages_Read_By_DP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Read Wait Time</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>